// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBalanceHistory last item is now and have an amount equals to account balance 1`] = `
Array [
  Object {
    "date": 2018-01-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-31T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-04T04:00:00.000Z,
    "value": 31226687,
  },
  Object {
    "date": 2018-03-05T04:00:00.000Z,
    "value": 88865516,
  },
  Object {
    "date": 2018-03-06T04:00:00.000Z,
    "value": 96472884,
  },
  Object {
    "date": 2018-03-07T04:00:00.000Z,
    "value": 203117175,
  },
  Object {
    "date": 2018-03-08T04:00:00.000Z,
    "value": 204327427,
  },
  Object {
    "date": 2018-03-09T04:00:00.000Z,
    "value": 204538833,
  },
  Object {
    "date": 2018-03-10T04:00:00.000Z,
    "value": 265191211,
  },
  Object {
    "date": 2018-03-11T04:00:00.000Z,
    "value": 276377442,
  },
  Object {
    "date": 2018-03-12T04:00:00.000Z,
    "value": 302928278,
  },
  Object {
    "date": 2018-03-13T04:00:00.000Z,
    "value": 319424597,
  },
  Object {
    "date": 2018-03-14T04:00:00.000Z,
    "value": 319344021,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 328312655,
  },
]
`;

exports[`getBalanceHistory(*,30) returns an array of 30 items 1`] = `
Array [
  Object {
    "date": 2018-02-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 1177540,
  },
]
`;

exports[`getBalanceHistory(*,365) works as well 1`] = `
Array [
  Object {
    "date": 2017-07-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-31T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-31T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-31T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-31T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-29T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-30T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-31T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-12T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-13T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-14T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-15T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-16T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-17T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-18T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-19T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-20T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-21T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-22T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-23T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-24T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-25T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-26T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-27T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-28T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-01T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-02T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-03T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-04T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-05T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-10T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-11T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-12T04:00:00.000Z,
    "value": 17247972,
  },
  Object {
    "date": 2018-03-13T04:00:00.000Z,
    "value": 10566148,
  },
  Object {
    "date": 2018-03-14T04:00:00.000Z,
    "value": 77400431,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 104030073,
  },
]
`;

exports[`getBalanceHistorySum with lot of accounts 1`] = `
Array [
  Object {
    "date": 2018-03-06T04:00:00.000Z,
    "value": 5939444340,
  },
  Object {
    "date": 2018-03-07T04:00:00.000Z,
    "value": 6882358096,
  },
  Object {
    "date": 2018-03-08T04:00:00.000Z,
    "value": 8057787117,
  },
  Object {
    "date": 2018-03-09T04:00:00.000Z,
    "value": 9658749578,
  },
  Object {
    "date": 2018-03-10T04:00:00.000Z,
    "value": 10951938807,
  },
  Object {
    "date": 2018-03-11T04:00:00.000Z,
    "value": 12687078558,
  },
  Object {
    "date": 2018-03-12T04:00:00.000Z,
    "value": 14217696062,
  },
  Object {
    "date": 2018-03-13T04:00:00.000Z,
    "value": 16089492225,
  },
  Object {
    "date": 2018-03-14T04:00:00.000Z,
    "value": 18411411135,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 19482621731,
  },
]
`;

exports[`getBalanceHistorySum works with one account and is identically to that account history 1`] = `
Array [
  Object {
    "date": 2018-03-06T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-07T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T04:00:00.000Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T04:00:00.000Z,
    "value": 72757734,
  },
  Object {
    "date": 2018-03-10T04:00:00.000Z,
    "value": 161195370,
  },
  Object {
    "date": 2018-03-11T04:00:00.000Z,
    "value": 277721122,
  },
  Object {
    "date": 2018-03-12T04:00:00.000Z,
    "value": 350351680,
  },
  Object {
    "date": 2018-03-13T04:00:00.000Z,
    "value": 350327238,
  },
  Object {
    "date": 2018-03-14T04:00:00.000Z,
    "value": 397210495,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 432551713,
  },
]
`;

exports[`groupAccountOperationsByDay 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1qkS2fpEPRiAmnq7SEUourfx2M1DzFZio",
        "amount": 14078038,
        "blockHeight": 192817,
        "date": 2018-03-14T14:51:43.583Z,
        "hash": "509AC684BC6F835B8390B39C89A1122A812240D2224D06B298EF6DB557D2A18F",
        "id": "mock_op_0_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1hDtRjyZEwbsvV2zfXt12xrxU1ebUse5",
        "amount": 9364,
        "blockHeight": 192807,
        "date": 2018-03-14T12:29:52.873Z,
        "hash": "624885EB6A8E58DFDCC48A05D49ECAEECFAB57EC2C3C0029594674EB2940B307",
        "id": "mock_op_1_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1skWN1Ywbsv5hdVrPF7PkefAsDKjnZGccE",
        "amount": 4004908,
        "blockHeight": 192799,
        "date": 2018-03-14T10:23:02.449Z,
        "hash": "6CC742A52E5800A1489E9E718EE1D5ED7F540E4CD5B7A8517EAD8662F2571722",
        "id": "mock_op_2_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1qm8HxmuXUzy5muw7Ja8E3UxS1",
        "amount": -18166494,
        "blockHeight": 192799,
        "date": 2018-03-14T10:22:27.242Z,
        "hash": "FB7054D15B7352A1BA1EE1BBD2D48D87816E20AFC651D13BB8A031269A4999DF",
        "id": "mock_op_3_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1LUS4sso7CUC1UEeBsZco9Yoytfv4GZKXS",
        "amount": 1176165,
        "blockHeight": 192792,
        "date": 2018-03-14T08:44:17.356Z,
        "hash": "CF5A161B4FDCBDC64B184705F60EE93CD89CA5FB857D01410D8057A29C4A149F",
        "id": "mock_op_4_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1Pbxfa1NGcrbmhxKjM5m935KoAj",
        "amount": 3516913,
        "blockHeight": 192791,
        "date": 2018-03-14T08:20:12.151Z,
        "hash": "E27AF53428B8DBDA670366918EF4C642A675C976ACC7E5F3206ECC9D1D9C1FD0",
        "id": "mock_op_5_mock_account_seed_7",
      },
    ],
    "day": 2018-03-14T04:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1zvdisquZ6ku6B7Zy7wahEnXu3qAWYwpot",
        "amount": 24998279,
        "blockHeight": 192733,
        "date": 2018-03-13T17:56:07.427Z,
        "hash": "FE9FA1D0E30CA65B88DF43D75D31966046C1DFADCE8CA710CE90E6933146784D",
        "id": "mock_op_6_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1xqbxmQdwdZG3Pbg8YE1jQ4nhiF5wi",
        "amount": -9622205,
        "blockHeight": 192724,
        "date": 2018-03-13T15:38:43.770Z,
        "hash": "23A13CEFD1341CA00ADCDBB394FF99A6D62CB83103B23C0C65C47149D1852D88",
        "id": "mock_op_7_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1LRadxwANTyJrsMNYN9FKJkVkZ3r",
        "amount": 9327322,
        "blockHeight": 192681,
        "date": 2018-03-13T04:55:42.103Z,
        "hash": "95E4039CB1DA2E5C4336D1FBD64E444BA6003DB94E1A3444C9A28B4D3F5E57E2",
        "id": "mock_op_8_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1UygcVaULGCoxXdMez4RcfXZzTskN",
        "amount": -8682917,
        "blockHeight": 192679,
        "date": 2018-03-13T04:21:20.111Z,
        "hash": "FCBE31F8DED3D5916DF55FB7BD3793BFBEEC38558E448AC2890D066C0B6116F2",
        "id": "mock_op_9_mock_account_seed_7",
      },
    ],
    "day": 2018-03-13T04:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1f7fYa8UFhsYCpGAvNKDKyxAUU",
        "amount": 12190312,
        "blockHeight": 192671,
        "date": 2018-03-13T02:27:34.438Z,
        "hash": "BF0E4ECC60D4B616C56B35B268093D51424F4EF8D20412D3EB1A78634FB66F94",
        "id": "mock_op_10_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "12UcV7CTQvbr2kKNaFEwze1K6KnP",
        "amount": 25785607,
        "blockHeight": 192652,
        "date": 2018-03-12T21:45:10.162Z,
        "hash": "C7D0947B4C8908BF6CF747DA2C1F8E5BD549B8B51473EB13D545D3679D4DD445",
        "id": "mock_op_11_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "11PMJghqQ4QASb5JtmSLHMJZeZd",
        "amount": 1354341,
        "blockHeight": 192652,
        "date": 2018-03-12T21:38:00.180Z,
        "hash": "9358A7B754A54DEE2B6AE9EE347DC0A496E33F8A5EF0FB00EAEFA2FFCC4335E6",
        "id": "mock_op_12_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "12RCkzfwNx1MpKn3JgjEVg912wDaJqyH",
        "amount": 8480958,
        "blockHeight": 192595,
        "date": 2018-03-12T07:30:59.186Z,
        "hash": "945F414C8D686C5A55AB1744960738BDE020DE728B59474DB1F062E195586C0C",
        "id": "mock_op_13_mock_account_seed_7",
      },
    ],
    "day": 2018-03-12T04:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1Q6D8WExUBBCocM2xEE8bZ1QS5ip",
        "amount": 5914995,
        "blockHeight": 192556,
        "date": 2018-03-11T21:41:19.123Z,
        "hash": "F962AD259C7BC7421FF1DBB26EEFCB6E2D0C1EA0930B5AAF888DEC3F0D112A11",
        "id": "mock_op_14_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1U9PYVj55aiY4fWXLn7axoKNVNoigcz",
        "amount": 857340,
        "blockHeight": 192553,
        "date": 2018-03-11T20:53:45.645Z,
        "hash": "463F590837E7566D16EC01870B97FCACC7B69562C75FE94703ADE635BFF4B01F",
        "id": "mock_op_15_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1exosUEoSKemV7xa1fHT36pwMJfcfSm5Q69",
        "amount": 238735,
        "blockHeight": 192537,
        "date": 2018-03-11T16:55:26.228Z,
        "hash": "83DA16F0EC4091775702D32DF921EF6C5878E48B437867C0BD79BC735D2E0AC5",
        "id": "mock_op_16_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1rp3v7bri1Zsk2YQV9Yr1rTcbK",
        "amount": 13390823,
        "blockHeight": 192532,
        "date": 2018-03-11T15:48:42.249Z,
        "hash": "EA994BB2ABFACFED4392A43100FF369CECB1DDD350B24A0F90A535F63B7E7C49",
        "id": "mock_op_17_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1UGqoH1MHaihkwuBW2fd8PvY9zkT",
        "amount": 1492976,
        "blockHeight": 192532,
        "date": 2018-03-11T15:48:32.976Z,
        "hash": "C93D180CFFDAA89593308C544459534709208E0219EF9631ADF0E67C3CDB3B98",
        "id": "mock_op_18_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1iGycPaAvtwHd6vU5kwmR7FBdsv",
        "amount": 1071592,
        "blockHeight": 192507,
        "date": 2018-03-11T09:22:41.286Z,
        "hash": "2F3312B856F302EC3F82DA569C9111EA8DA761BD034C0F070946C058AC0A9D2F",
        "id": "mock_op_19_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1b5BocwCQtBCBC5BjvKigQ8E8dYQCsG",
        "amount": -2880505,
        "blockHeight": 192507,
        "date": 2018-03-11T09:22:34.220Z,
        "hash": "7E9EAC46517295F5A47E225A450772299B130ADDFEC489897942778B5CB7470F",
        "id": "mock_op_20_mock_account_seed_7",
      },
    ],
    "day": 2018-03-11T05:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "19wdJxcYKKPMf8vNESaJf32E61vZw2U4o6",
        "amount": 2969732,
        "blockHeight": 192456,
        "date": 2018-03-10T20:38:37.771Z,
        "hash": "0C983A8EE635EBFC38DA0FF834CA6BC77C7748BF3CC839F8FCFB8C8548D9CD2D",
        "id": "mock_op_21_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1qXGQCFzwH5krBYcdDfKFGG1ndnGEHy",
        "amount": 485325,
        "blockHeight": 192451,
        "date": 2018-03-10T19:30:13.521Z,
        "hash": "149D13605D4676E00AD75A5E33388E37688C43A571F3ED49461C66DF3FC57B57",
        "id": "mock_op_22_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1VV2SebBNTramBmrkyU2B9mCrY3dp",
        "amount": -19370184,
        "blockHeight": 192438,
        "date": 2018-03-10T16:06:56.630Z,
        "hash": "30F0ECE4AAD1B10A38A6B7F76D7AEF3C707D9B803C9CEEB8DC36B240E2604278",
        "id": "mock_op_23_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1dQGWnBsPc2ywimqnkn5YrRCqr",
        "amount": -1232859,
        "blockHeight": 192423,
        "date": 2018-03-10T12:26:56.300Z,
        "hash": "11B49EC9B53AC114094EC7866819AAB57ED0F89ED9B6D9007BE23B2E54C3B33A",
        "id": "mock_op_24_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1W5UeGFUuVGjNk1YNDrUddYb5ZAt9v",
        "amount": 4881873,
        "blockHeight": 192422,
        "date": 2018-03-10T12:18:11.589Z,
        "hash": "52D2615019DF1F6F87D726EB4F2019518348165D3E5EC0FE33695F4B258075C4",
        "id": "mock_op_25_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1GXLQvQhZdY72FVJGv7egxqai749WUed7k",
        "amount": 22336297,
        "blockHeight": 192419,
        "date": 2018-03-10T11:32:53.490Z,
        "hash": "3912ECFE84C55AD313EE87F12021C30E4701DE988CE8A7032A9785AEE54AF534",
        "id": "mock_op_26_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1ZgpoGsHhiHZE8GdtL51ZoyJxL6C",
        "amount": 3252020,
        "blockHeight": 192419,
        "date": 2018-03-10T11:25:27.381Z,
        "hash": "9B3446A98C5B7290DEEE0075AB9FAF68F004A82AAB096B012C4E1AD6870F26F9",
        "id": "mock_op_27_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1gYRbijvvpgGsz2xkxinCpazaxYo4pDp5q",
        "amount": -6616536,
        "blockHeight": 192411,
        "date": 2018-03-10T09:22:16.975Z,
        "hash": "DD97EFF77F706D071A04357C77A3409396A434EE9A2119D9F7248BAC8C12ECFD",
        "id": "mock_op_28_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1ATnh3nyn34dXWKQko2XzQdB1vNVa",
        "amount": -16460111,
        "blockHeight": 192398,
        "date": 2018-03-10T06:14:49.814Z,
        "hash": "A53D9B64E266483B9D2588CA608F697A1C43D46AE348A02B6AFFB6DC4BE97617",
        "id": "mock_op_29_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1aijeDgdWfHJMNgLmsS1JhyoCDxRG",
        "amount": 13288759,
        "blockHeight": 192394,
        "date": 2018-03-10T05:18:39.805Z,
        "hash": "AFD483563E67D1F666EE41D867E8F90DA9197E79273B1B73CAA6F0877DCADFC0",
        "id": "mock_op_30_mock_account_seed_7",
      },
    ],
    "day": 2018-03-10T05:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1dh6tUp61TGwKfiCPL9Rs9Kw4THAMmuvS7c",
        "amount": 3768511,
        "blockHeight": 192364,
        "date": 2018-03-09T21:48:43.608Z,
        "hash": "9BBE6D491C7A61390FCED620D992A5479294CB9AD7F56D7D4E6F57AD341ED806",
        "id": "mock_op_31_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1qr3N23eRgjDfogfuw4uPecpbc1Zh3SD",
        "amount": 1886231,
        "blockHeight": 192329,
        "date": 2018-03-09T12:52:34.028Z,
        "hash": "F118D1F818D7E44BC10FCF51053B5DE1E8923199865A1B21E3912849AA3DC1E5",
        "id": "mock_op_32_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1pLLu8trrAWkpZyKw3JcG6vrwcsHChaY",
        "amount": 1033407,
        "blockHeight": 192328,
        "date": 2018-03-09T12:39:05.946Z,
        "hash": "4CF7C877853D6D54FBD206C571DCC73C89D87ECAB6D1EC362DF625FFC5F75620",
        "id": "mock_op_33_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1xD45cbMQgzuBZqWuwYKMxGMz47Wy",
        "amount": -6401923,
        "blockHeight": 192327,
        "date": 2018-03-09T12:26:49.634Z,
        "hash": "172B32A87CC81ACC35E87FECA827D988D2CB9B6A564D13D617B5CE3635922F80",
        "id": "mock_op_34_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1MMxfjCCeAfZAt5YBfuiokMA3n",
        "amount": 3502230,
        "blockHeight": 192311,
        "date": 2018-03-09T08:22:25.426Z,
        "hash": "9F9FEED7801AAE137E209C121C474585D034B03D0D588FD5AF900C6F6A9EDF02",
        "id": "mock_op_35_mock_account_seed_7",
      },
    ],
    "day": 2018-03-09T05:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1zkSBzKX1HLT6rDRZ8pW92umtXqmWeVu",
        "amount": -838716,
        "blockHeight": 192273,
        "date": 2018-03-08T23:04:21.170Z,
        "hash": "7873F1C4C252942B3B925C6EDD7ACD27F7DE8BF5BCF73DE7C3E1193DD2FFA3BA",
        "id": "mock_op_36_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1scj982gETZi8YvFGiKfAe9d7z",
        "amount": 12229659,
        "blockHeight": 192273,
        "date": 2018-03-08T22:57:03.030Z,
        "hash": "DBAC56E495AF0E6EC7CB6F803D9EF23D771F1B74245D7A6FE68EC011E57B6921",
        "id": "mock_op_37_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1ppiZmKx1nRuDb2aqxrttednxc5moB2znKc",
        "amount": 17148458,
        "blockHeight": 192269,
        "date": 2018-03-08T21:58:30.830Z,
        "hash": "892D727BDBC051B26CFAC369458077F44F91CA7D315DFC6E81336346C7C41326",
        "id": "mock_op_38_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1XG2WqWmg4pVAm2G6ACf8dKdEqKAsRW",
        "amount": -9830297,
        "blockHeight": 192269,
        "date": 2018-03-08T21:52:24.183Z,
        "hash": "D450247CB41E75B6B59810DB91362DF20ECB769083FB08388CAF020941B532E5",
        "id": "mock_op_39_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1mh379nUkHGoK3dMVTPp9PHTS2ELM",
        "amount": -6175278,
        "blockHeight": 192267,
        "date": 2018-03-08T21:23:40.712Z,
        "hash": "CE7961104CAAC4160CE75D4E2238938A9EC365ADA1D1A402177F1C8307B2E870",
        "id": "mock_op_40_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1ATPgMjLRfjZqRT9oKwKhiZyeyREAUwiQW",
        "amount": -29657652,
        "blockHeight": 192257,
        "date": 2018-03-08T18:51:23.837Z,
        "hash": "5BF0E0F7EEC04D279252D3A2EFD3E92C93D91C27E882CAB59EE4F1D8EE525D18",
        "id": "mock_op_41_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1V2kG9w9nRzbjoYiH6JguoNmac",
        "amount": -12205470,
        "blockHeight": 192235,
        "date": 2018-03-08T13:27:06.404Z,
        "hash": "4DE666FF92903CE07173B7698D0E6F292E2830F04FF9440506882DB341CC7F8C",
        "id": "mock_op_42_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1MQTPQgXVuc7CXbMe6EoKLe55rao5rMMcr4",
        "amount": -10969142,
        "blockHeight": 192229,
        "date": 2018-03-08T12:02:32.399Z,
        "hash": "9C78254D173824F2C22A4B5A905E357E6C99FBAA47413C09175A6CCEF1E0A056",
        "id": "mock_op_43_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1zLhNTSv6TVNjBfSAU7raoH3XPLJUdCX",
        "amount": -5245961,
        "blockHeight": 192220,
        "date": 2018-03-08T09:46:08.793Z,
        "hash": "D7E464BDF3EB0E4409AA980A81038B6C3D307FB5FA3890E2B51E1311D1DB65F3",
        "id": "mock_op_44_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1pyEUnRHiuYC359tnuia8NhVqYJqFsDLfC",
        "amount": 16941704,
        "blockHeight": 192218,
        "date": 2018-03-08T09:17:34.962Z,
        "hash": "08D247015928301C19916D9386A3B09AB1CA993A1A930332B8AF599E08208BF7",
        "id": "mock_op_45_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1pqutU7PQ1jJkGE8dcQpgmRiiQtsHhZ38",
        "amount": 28762652,
        "blockHeight": 192206,
        "date": 2018-03-08T06:11:07.681Z,
        "hash": "96AF226DA0D9E1FE78B65A18682DA5B08F85A172F4661CFB014A62D65F92A4D6",
        "id": "mock_op_46_mock_account_seed_7",
      },
    ],
    "day": 2018-03-08T05:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "15AstJbwKDzNNoS1fNfo8hBkPMoV",
        "amount": -15047395,
        "blockHeight": 192166,
        "date": 2018-03-07T20:14:30.800Z,
        "hash": "4ACD450575B9D3F5168FC120791CCE4F83D26346101F91FADCDE50C69002DD44",
        "id": "mock_op_47_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1tqYLAHyAeQqLAsyMbm73BU5mj3HEV1",
        "amount": 19571633,
        "blockHeight": 192164,
        "date": 2018-03-07T19:46:32.737Z,
        "hash": "184AE75B7E60B13AE980C4A87A43C8D743570F0A82EC18B571F9790C8C7ED18A",
        "id": "mock_op_48_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "19zQFk4Tn7nF9q3r7VBaZ6brWcZCyazzEv",
        "amount": 35638210,
        "blockHeight": 192154,
        "date": 2018-03-07T17:05:53.402Z,
        "hash": "FB023099C6F9D3A58AE0B643EB121DE8B9E72BE59C2E8CAB661ED3066DAB4B70",
        "id": "mock_op_49_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1pTLgeiY4McS8yZj6mqrCav8epDyeWHiewT",
        "amount": -11008830,
        "blockHeight": 192141,
        "date": 2018-03-07T13:50:20.248Z,
        "hash": "A1CDFA467810F725B9C4D0F1FDE6C5B27FDD8A823BF7A3F68B64D29F5C5BFD79",
        "id": "mock_op_50_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1nypx7X2tbyhmygwFL7zd3XoiRiax5BzaNT",
        "amount": -1552488,
        "blockHeight": 192139,
        "date": 2018-03-07T13:27:10.156Z,
        "hash": "0F6B0FD81FEB0D05F86740579B7F98AB4C25A1C32386B231931E2F3A6E6493FF",
        "id": "mock_op_51_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1XM31tyDeGSiaqiqJ8VVJ6uqKZRn",
        "amount": 277512,
        "blockHeight": 192112,
        "date": 2018-03-07T06:49:41.725Z,
        "hash": "CC52093A1073E833FBF143EE11693EB69CC077FD0F25A304F882589D411F4064",
        "id": "mock_op_52_mock_account_seed_7",
      },
    ],
    "day": 2018-03-07T05:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1rqdnki5z8UaNk5atdnBAX8Zb8dzt",
        "amount": 33172837,
        "blockHeight": 192093,
        "date": 2018-03-07T02:02:20.877Z,
        "hash": "C7EA18E05F2743AAE48C27AF8059AEE9F115C286FD22412466E8AD13F6BB4CB3",
        "id": "mock_op_53_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1eJXTttaHEbyaRWPZAyHvuxwTRYtm7Z",
        "amount": 2128055,
        "blockHeight": 192090,
        "date": 2018-03-07T01:12:24.752Z,
        "hash": "9E504BC6DF5A234DC81EB1672021B4025A939D931EBC7BC44111F6C2F509FFD5",
        "id": "mock_op_54_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1A4JJFYMXnMscHZ4kcupLmcVseZ5zb",
        "amount": 1180881,
        "blockHeight": 192063,
        "date": 2018-03-06T18:29:27.936Z,
        "hash": "79B775E71D5573510DF5B881DA9DD785FBB6A9C75B9F0368EC31A13882B24D2B",
        "id": "mock_op_55_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1pB1fKhRAzsa54A568aJZdjUSPuMzQmVr1",
        "amount": 61926,
        "blockHeight": 192043,
        "date": 2018-03-06T13:22:17.533Z,
        "hash": "AED8B44A81199309F27E6112D64521E30EBE20CE902DAEC1B2278039016F88CA",
        "id": "mock_op_56_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1ByXPVPxWFoqNbiM5BSdy4ity3hB",
        "amount": 1582913,
        "blockHeight": 192041,
        "date": 2018-03-06T12:56:31.488Z,
        "hash": "A90A5463A815486AB3B8ECEB23EF1B38ED6879B2DBFCA34F441A1F74F32C9D0D",
        "id": "mock_op_57_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1A23Ahdevd41GErSnmUfpCzUR8zT",
        "amount": 2314133,
        "blockHeight": 192025,
        "date": 2018-03-06T08:55:52.109Z,
        "hash": "32531BD6484B0CE0BAE9DEED87617E0F373D020A3A098BE0BCE71D0C2CBE319A",
        "id": "mock_op_58_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1tz9LD7XCnqU63jUwRCVh5bbsqxoZ8t",
        "amount": 2362545,
        "blockHeight": 192024,
        "date": 2018-03-06T08:38:07.329Z,
        "hash": "476968E71AC2B2798F7A11BCF8E49671254B8C5CB96687E955BE8FA4AD2A63C9",
        "id": "mock_op_59_mock_account_seed_7",
      },
    ],
    "day": 2018-03-06T05:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1KgZZURLqrqQh1tMu7qiwXPxZ2dM",
        "amount": -738894,
        "blockHeight": 192003,
        "date": 2018-03-06T03:23:35.815Z,
        "hash": "AB8304F8A0B40B87B7C95B1D3E40BF2EB827B4E636E1E6CBA0AA7AE6B4F49897",
        "id": "mock_op_60_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1bBmFQHREXdSBqbomHcm1pTw2gV8SdkzQNq",
        "amount": 31102485,
        "blockHeight": 191994,
        "date": 2018-03-06T01:04:50.041Z,
        "hash": "38802F8C3E74A4DE5C0ADBFBB6D9C1902FF8594B94C3393E2CFF83B18A77F3CD",
        "id": "mock_op_61_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1KDEzXZHVhPpfTMTAq3tFcMFKp1kn",
        "amount": 21449067,
        "blockHeight": 191992,
        "date": 2018-03-06T00:42:50.235Z,
        "hash": "15CC0F16ECD8AD3BA8877FB5D5ABFC643E09FC0A453C0ED3F5BE2B26D9335835",
        "id": "mock_op_62_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "13H9hHEzqfUHwiQY64DdNt2hxHq6",
        "amount": 5153817,
        "blockHeight": 191991,
        "date": 2018-03-06T00:26:48.239Z,
        "hash": "EAA7EE7F43A85C8B573520E3009E4851B456E9407C718DCAA17B07359C43E284",
        "id": "mock_op_63_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "14wRd654XDUgoRykb5YWJDEFUVwjgYFK",
        "amount": -6044020,
        "blockHeight": 191991,
        "date": 2018-03-06T00:21:48.414Z,
        "hash": "65130ABF836B72F7AB4B293226D4177441CB269F2E126C5D20C55DC2CA43F0CC",
        "id": "mock_op_64_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1nQgsPrRcXugNPNpZZhbRPN6UM",
        "amount": 9379612,
        "blockHeight": 191976,
        "date": 2018-03-05T20:45:37.433Z,
        "hash": "C1A2D3B590CDA12DB9CCACF0E48F94AC3A6C0491B1EB2DD3FD72C8123E5B0FFD",
        "id": "mock_op_65_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1B4SMxZzKA9Z6C5zpmFRppPDSdLpxTb",
        "amount": -37715,
        "blockHeight": 191971,
        "date": 2018-03-05T19:31:45.765Z,
        "hash": "82E1FB9CA661FFC6CFB969BA764198AF61BB454989F830F00D4A0F337BD5905F",
        "id": "mock_op_66_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "18y6fpPFNPKxqdjM3vgwQQiXN8GNXSY",
        "amount": 1649252,
        "blockHeight": 191959,
        "date": 2018-03-05T16:23:12.318Z,
        "hash": "842B3F9F0C6E9AD33C11844176D3AFF3338A206D2B962F6CF4FF44B9D9155224",
        "id": "mock_op_67_mock_account_seed_7",
      },
    ],
    "day": 2018-03-05T05:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "14kZhVXwKR2vU57ciM9LWCCeu1",
        "amount": 5650779,
        "blockHeight": 191897,
        "date": 2018-03-05T00:58:25.946Z,
        "hash": "AD49C2B1DF996E034140A9B55AA0E73BABDDAD69D2F6C0A557F50B5B78456529",
        "id": "mock_op_68_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1m6j75rv9eWMGEDEPMGyPRLHhFteo",
        "amount": 27026202,
        "blockHeight": 191891,
        "date": 2018-03-04T23:24:44.105Z,
        "hash": "A7E493D878A243B4E89016CB9116C57270E8850ED942B3F5E40B1A51D3FA6659",
        "id": "mock_op_69_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1XV5M23puwFNP7WHY9RHAWdGtmdp",
        "amount": 10196046,
        "blockHeight": 191888,
        "date": 2018-03-04T22:39:27.807Z,
        "hash": "A1D74C4D18ADBC1048F3BCBBF9C926326DC8F706D4BDBC9C2FA088B59B77A9C7",
        "id": "mock_op_70_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "17DS1hCCzzevb75G1aCWu2dNsbB",
        "amount": 2331169,
        "blockHeight": 191877,
        "date": 2018-03-04T20:03:54.164Z,
        "hash": "105EAEDF38ACBBED16EC9EBACB6829D274407C77A4A96E7109D61EA82EA1B495",
        "id": "mock_op_71_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "198CVC34jyyyUAABArABjCBLqfejNeX",
        "amount": -13962263,
        "blockHeight": 191877,
        "date": 2018-03-04T19:56:21.988Z,
        "hash": "F53F38769EA3FF339C5615E1A30213E8B67734090D96BFE005B3921DE7BC5FBB",
        "id": "mock_op_72_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1ktZ6JkLE1QY9NhN7h66MJGeQbmKrnc7p",
        "amount": 1551019,
        "blockHeight": 191868,
        "date": 2018-03-04T17:40:31.889Z,
        "hash": "0466452B210929A5380362DC6BEB62F1BB2A96997ED80C16E82ED40DB4298213",
        "id": "mock_op_73_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "11HUPdrRy3XQ2Q1xqFoJbUETnpX",
        "amount": -9232222,
        "blockHeight": 191857,
        "date": 2018-03-04T14:58:39.543Z,
        "hash": "FA3CB54F13B3E3D4AB957142A3D5ECCF806CACA5B56EF1BF4B2E986FEBBF956F",
        "id": "mock_op_74_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1dzt18CkcnUr1pRg4g2bPruUKNwvE485wB",
        "amount": 3336215,
        "blockHeight": 191844,
        "date": 2018-03-04T11:45:37.498Z,
        "hash": "C052C04783876727E1BF6B4997547C69AC92D0C1BEC2B6C238AA07211D17C131",
        "id": "mock_op_75_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1djcmuk7GtLtLBnkvHYt69XvHjZ1Dv",
        "amount": -27141036,
        "blockHeight": 191828,
        "date": 2018-03-04T07:36:40.124Z,
        "hash": "3824007CDC51CAD2B33981E7B4B7B114405CCFECF8307A299FB0704B73942E47",
        "id": "mock_op_76_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1PCdXeTk2hSRWGUtaq3YhaZ64Sr",
        "amount": -14025202,
        "blockHeight": 191825,
        "date": 2018-03-04T06:57:27.787Z,
        "hash": "AE0712C26CD1274238D0C366B685B84A97807B611305C3E27273D4216CE1C055",
        "id": "mock_op_77_mock_account_seed_7",
      },
    ],
    "day": 2018-03-04T05:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1YWHV6wFGpiykttQvE8hBzYFgVj22",
        "amount": 39413237,
        "blockHeight": 191799,
        "date": 2018-03-04T00:24:56.398Z,
        "hash": "914573C9103CB10D6C291736410B5DA3F843DEBB13A4B198D6DC6E9EB203271E",
        "id": "mock_op_78_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "13J1ECo41LkTazoPQj6VGZ2MCSwQH8rdfZ",
        "amount": -2202440,
        "blockHeight": 191799,
        "date": 2018-03-04T00:23:18.578Z,
        "hash": "8A4C1105A0FC7E6BAE6E29A90D6F41F75D4BAFCC2BCC75E82DB19E9E04C49202",
        "id": "mock_op_79_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1PkqiLFpCDgSfDHqggqk4R8hRUwjT3NfsT2",
        "amount": 11611931,
        "blockHeight": 191760,
        "date": 2018-03-03T14:48:07.410Z,
        "hash": "A91317BB8F46DEE5593E23B803E6FE965EFB0AC71888490C7EEC320CF7806A2D",
        "id": "mock_op_80_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1dJeG7cqn6Uaoj1reE3YtbGUBgDzSH",
        "amount": 22198369,
        "blockHeight": 191757,
        "date": 2018-03-03T14:00:05.589Z,
        "hash": "33D4FBB047461FEEB64769AD47FC55C2C0799F90C888AE269B2810F63CAACEB4",
        "id": "mock_op_81_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "197oGqF8gjtNrCSZ3ChGnrR99kjMjnBS8kt",
        "amount": -5145575,
        "blockHeight": 191732,
        "date": 2018-03-03T07:48:01.604Z,
        "hash": "2842341F4E5520D81CF04D705898CEC5314EF77E77519E56F544022A763DDC60",
        "id": "mock_op_82_mock_account_seed_7",
      },
    ],
    "day": 2018-03-03T05:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1hTPhMowNAKqk23gzCuy5GWoSwzE",
        "amount": 60329783,
        "blockHeight": 191683,
        "date": 2018-03-02T19:34:07.544Z,
        "hash": "C5255654D537578235BFEB778FF7DAB57B0B85CD0404D5360AA80677018EFF82",
        "id": "mock_op_83_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1m5xjQ9vbhiaihMfeTnyufYodZv6wbBpL",
        "amount": 3165785,
        "blockHeight": 191676,
        "date": 2018-03-02T17:42:05.105Z,
        "hash": "0267CBD8D9AC038BBD2041CE9EF85EE0BE73ECCB98E6B71059D4A4783F027BB8",
        "id": "mock_op_84_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1hG23g8AKx6JEftX2N14DN1mTzRG8fTa",
        "amount": -12128138,
        "blockHeight": 191675,
        "date": 2018-03-02T17:31:25.270Z,
        "hash": "2C2E0C612A261293F34AD61B29A27081233E333107FC9CED1EC29A6E76BED9D2",
        "id": "mock_op_85_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1g8YUEp3LV1mfmLxJuTQL2AXEQext1",
        "amount": -713240,
        "blockHeight": 191667,
        "date": 2018-03-02T15:22:43.909Z,
        "hash": "F4EF028B2247D7A15F3BCBD1B1C952082A9802AA4BE7B692E557D9E52DAB4155",
        "id": "mock_op_86_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "11RN2HcaKX4dV5hkagAG9DRf6t",
        "amount": 64429499,
        "blockHeight": 191628,
        "date": 2018-03-02T05:40:24.803Z,
        "hash": "930C68D1A1F860558D9F02CF0737A37FA2065A78C859FE16434C95ADBE91430A",
        "id": "mock_op_87_mock_account_seed_7",
      },
    ],
    "day": 2018-03-02T05:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1R3wdbE2PA1DbMMjvos7UtR4n6vaJRajQC",
        "amount": -277861,
        "blockHeight": 191620,
        "date": 2018-03-02T03:45:34.711Z,
        "hash": "53897013DD5DC68850CEB823D151259D7E1AA7EA78A931ACAB8988BB9A316971",
        "id": "mock_op_88_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1sdtLyeGtAuFMhRH6dJeU7cZzLQaFXbgx",
        "amount": 6693079,
        "blockHeight": 191582,
        "date": 2018-03-01T18:11:38.692Z,
        "hash": "DB5C9F231E9512FCB3E4A42E756CDEDED5F3609F61CB470A1CE5D5F47FFBFFA8",
        "id": "mock_op_89_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1sC315U3KtGnGfSUpELBfGdQdL6z",
        "amount": 16038188,
        "blockHeight": 191532,
        "date": 2018-03-01T05:44:59.409Z,
        "hash": "17A3E398CB0BBE9B618409436D81DB44605331FCA3062A444A9E71E9B86558D3",
        "id": "mock_op_90_mock_account_seed_7",
      },
    ],
    "day": 2018-03-01T05:00:00.000Z,
  },
  Object {
    "data": Array [
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1f65MNnEMsoKfqs7vaWfmPg2ZYzFB",
        "amount": 43502,
        "blockHeight": 191522,
        "date": 2018-03-01T03:13:11.573Z,
        "hash": "017FC68B77CAFFE6263A8703F136A7E04D78CE8A78CA5D2318B42ED51E110136",
        "id": "mock_op_91_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1FzhKeThx6ccjbw3hMhPKe2WTahch",
        "amount": 17636048,
        "blockHeight": 191514,
        "date": 2018-03-01T01:16:47.875Z,
        "hash": "3209DFE74D8CC91FFA032CB804B45C56F9D71F7A99030623A1EE5CCD515C6825",
        "id": "mock_op_92_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1MRtj5Gt8rmuisu72a1ZFWd8ZNgx",
        "amount": 11516388,
        "blockHeight": 191513,
        "date": 2018-03-01T00:55:56.045Z,
        "hash": "E8A8C395F34045FF9C79077C5D9B1B0C879DC6B53B39E124964ECFDF8B438EFE",
        "id": "mock_op_93_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1SDGxeKKsd2GSSS7ob1zU1Z8nSiT5Z1",
        "amount": -2413595,
        "blockHeight": 191511,
        "date": 2018-03-01T00:28:15.624Z,
        "hash": "B78F7E5C7DC19EE9DB250D4937F81467D9A8A7FFFE26A33989FE29440A5D8A14",
        "id": "mock_op_94_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1Q3tzCcbSn1Lp9ZWqNspv5wfxL",
        "amount": 20220630,
        "blockHeight": 191508,
        "date": 2018-02-28T23:35:14.766Z,
        "hash": "3089C774E136ADB305A97552B7A32CFC6BCFAD759D43808B9ECD0D4760989578",
        "id": "mock_op_95_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1YvLXwacmM7TGhMGb9aRjqRirXVUZJwuB",
        "amount": 427383,
        "blockHeight": 191502,
        "date": 2018-02-28T22:07:29.997Z,
        "hash": "FF35A78DB012FB0749BED2530E06E920FE22F6D6DDDA8E74F2E49FCD96E452E6",
        "id": "mock_op_96_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1DWTYXqV6mjPoqH8dzEjzuFgX7WcD2",
        "amount": -15322401,
        "blockHeight": 191493,
        "date": 2018-02-28T19:50:07.072Z,
        "hash": "F4F0828CCF4A0046890F79E157A9A6130759C621FACE999394B5FC4E4A149967",
        "id": "mock_op_97_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "1U39wTxqakay2H8tU1NB1BEfZSA2r",
        "amount": 2927732,
        "blockHeight": 191473,
        "date": 2018-02-28T14:53:11.696Z,
        "hash": "52E2EA64C3AD19B44288D9755B9F3BE0C28BD1BA400761266B67A75FDAAF2294",
        "id": "mock_op_98_mock_account_seed_7",
      },
      Object {
        "accountId": "mock_account_seed_7",
        "address": "11p4EWQBJU3XhBVMzZYquH6Yht91",
        "amount": -1494070,
        "blockHeight": 191456,
        "date": 2018-02-28T10:39:12.993Z,
        "hash": "967BBC969412321FCD2C63E18F0E25C914406762237A957DE999018BF320F969",
        "id": "mock_op_99_mock_account_seed_7",
      },
    ],
    "day": 2018-02-28T05:00:00.000Z,
  },
]
`;
